[gd_scene load_steps=15 format=3 uid="uid://c1vd2ta12esrp"]

[ext_resource type="Texture2D" uid="uid://cwlyrfuy13qpe" path="res://assets/kenney_tiny-dungeon/Tiles/tile_0088.png" id="1_1wo77"]
[ext_resource type="Script" path="res://scripts/knight.gd" id="1_aeyxp"]
[ext_resource type="Texture2D" uid="uid://b5yflci1ymots" path="res://assets/kenney_tiny-dungeon/Tiles/tile_0098.png" id="3_6lorq"]
[ext_resource type="Texture2D" uid="uid://bgkyt5d3c8guy" path="res://assets/kenney_tiny-dungeon/Tiles/tile_0097.png" id="4_1lsbg"]
[ext_resource type="Texture2D" uid="uid://b0k7jh1540jud" path="res://assets/kenney_tiny-dungeon/Tiles/tile_0096.png" id="5_x0x5v"]
[ext_resource type="PackedScene" uid="uid://b0ehm5jgg6a4e" path="res://Components/unit_health_bar.tscn" id="6_6jnmc"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xh7km"]
radius = 7.0
height = 18.0

[sub_resource type="CircleShape2D" id="CircleShape2D_3mce8"]
radius = 528.009

[sub_resource type="Animation" id="Animation_goyvc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("knight_sprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.213441]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("knight_sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-3, -4)]
}

[sub_resource type="Animation" id="Animation_2lgwb"]
resource_name = "attack_left"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("knight_sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(4, -7), Vector2(10, -15), Vector2(16, -21), Vector2(10, -15), Vector2(4, -7), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("knight_sprite:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.372531, 0.906937, 1.5708, 0.906937, 0.372531, 0.0]
}

[sub_resource type="Animation" id="Animation_dsds1"]
resource_name = "attack_left"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("knight_sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(2.08165e-12, 2.08165e-12), Vector2(-4, -7), Vector2(-10, -15), Vector2(-16, -21), Vector2(-10, -15), Vector2(-4, -7), Vector2(2.08165e-12, 2.08165e-12)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("knight_sprite:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [3.48787e-16, -0.371755, -0.907571, -1.5708, -0.907571, -0.371755, 3.48787e-16]
}

[sub_resource type="Animation" id="Animation_i3dgl"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("knight_sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2.08165e-12, 2.08165e-12)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("knight_sprite:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [3.48787e-16]
}

[sub_resource type="Animation" id="Animation_xvvfo"]
resource_name = "walk"
length = 0.3
step = 0.03
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("knight_sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.09, 0.21, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-3, -4), Vector2(5, -5), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("knight_sprite:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.09, 0.21, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.314159, 0.32943, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6km04"]
_data = {
"RESET": SubResource("Animation_goyvc"),
"attack": SubResource("Animation_2lgwb"),
"attack_left": SubResource("Animation_dsds1"),
"idle": SubResource("Animation_i3dgl"),
"walk": SubResource("Animation_xvvfo")
}

[node name="knight" type="CharacterBody2D" node_paths=PackedStringArray("repulsionArea", "attackRadius", "health_display") groups=["player_units", "unit"]]
scale = Vector2(2, 2)
script = ExtResource("1_aeyxp")
repulsionArea = NodePath("repulsion_area")
attackRadius = NodePath("attack_radius")
health_display = NodePath("unit_health_bar")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CapsuleShape2D_xh7km")

[node name="knight_sprite" type="Node2D" parent="."]
position = Vector2(-3, -4)
rotation = -0.213441
metadata/_edit_group_ = true

[node name="level_one" type="Sprite2D" parent="knight_sprite"]
position = Vector2(0, -1)
texture = ExtResource("1_1wo77")

[node name="level_five" type="Sprite2D" parent="knight_sprite"]
visible = false
texture = ExtResource("3_6lorq")

[node name="level_ten" type="Sprite2D" parent="knight_sprite"]
visible = false
texture = ExtResource("4_1lsbg")

[node name="level_fifteen" type="Sprite2D" parent="knight_sprite"]
visible = false
texture = ExtResource("5_x0x5v")

[node name="attack_radius" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack_radius"]
shape = SubResource("CircleShape2D_3mce8")

[node name="repulsion_area" type="Area2D" parent="."]
visible = false
position = Vector2(-3, -4)
collision_layer = 5
collision_mask = 5

[node name="CollisionShape2D2" type="CollisionShape2D" parent="repulsion_area"]
visible = false
position = Vector2(3, 4)
shape = SubResource("CapsuleShape2D_xh7km")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6km04")
}

[node name="attack_rate" type="Timer" parent="."]
wait_time = 0.95
one_shot = true

[node name="attack_buffer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="unit_health_bar" parent="." instance=ExtResource("6_6jnmc")]

[connection signal="body_entered" from="attack_radius" to="." method="_on_attack_radius_body_entered"]
[connection signal="body_exited" from="attack_radius" to="." method="_on_attack_radius_body_exited"]
[connection signal="body_entered" from="repulsion_area" to="." method="_on_repulsion_area_body_entered"]
[connection signal="body_exited" from="repulsion_area" to="." method="_on_repulsion_area_body_exited"]
[connection signal="timeout" from="attack_rate" to="." method="_on_attack_rate_timeout"]
[connection signal="timeout" from="attack_buffer" to="." method="_on_attack_buffer_timeout"]
